week 3 final edits

--- a/week1/basicpage.html
+++ b/week1/basicpage.html
@@ -12,7 +12,7 @@
        Ram: 8.0 GB<br>
        Processor: Intel i5-6200U<br> 
     </p>
-    <img src="images/profile.jpg" alt="My profile picture" style="width:200px;height:230px"><br>
+    <img src="C:\Users\parhe\CIT 230\CIT230\images\profile.jpg" alt="My profile picture" style="width:200px;height:230px"><br>
     <a href="http://www.byui.edu/online/">BYU-I Online</a>
 </body>
 </html>
