--- a/week2/index.html
+++ b/week2/index.html
@@ -9,7 +9,7 @@
  </head>
  <body>
     <header>
-        <img src="images/profile.jpg" alt="My profile picture" style="width:200px;height:230px"><br>
+        <img src="C:\Users\parhe\CIT 230\CIT230\images\profile.jpg" alt="My profile picture" style="width:200px;height:230px"><br>
         <h1>Brandon J. Parham</h1>
     </header>
     <main>
