add pdf to index.html

--- a/week2/index.html
+++ b/week2/index.html
@@ -15,7 +15,7 @@
     <main>
         <h2>CIT 230 - Assignment Portal</h2>
         <li>Lesson 03: <a href="../week3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
-        <li>Lesson ##: <a href="#">Assignment Label</a></li>
+        <li>Lesson 04: <a href="../week4/Weather Site Project Plan PDF.pdf">Weather Site Project Plan</a></li>
         <li>Lesson ##: <a href="#">Assignment Label</a></li>
     </main>
     <footer>
