--- a/week4/preston-4.html
+++ b/week4/preston-4.html
@@ -10,8 +10,34 @@
 <body>
 
 <header>
-    
+    <div class="logo">
+        Logo
+    </div>
+    <div class="title1">The Weather Site<br>Bringing you the most accurate and up to date weather forecasts</div>
 </header>
+
+<nav>
+    <div class="menu">Menu</div>
+</nav>
+
+<div class="selectedtown">Town Name</div>
+
+<div class="mainimage">
+    <div class="summary1">Weather Summary</div>
+</div>
+
+<div class="fiveday">5 day forecast</div>
+
+<div class="article"></div>
+
+<div class="map">
+    <div class="contactinfo">Ipsum supsum dupsum</div>
+</div>
+
+<footer>
+
+
+</footer>
     
 </body>
 </html>
