week4 final changes

--- a/week4/preston-4.html
+++ b/week4/preston-4.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -11,32 +11,60 @@
 
 <header>
     <div class="logo">
-        Logo
+        <div class="logo1">
+            <img src="weather.png" alt="logo">
+        </div>
     </div>
-    <div class="title1">The Weather Site<br>Bringing you the most accurate and up to date weather forecasts</div>
+    <div class="title">
+        <div class="title1">
+            <h3><b>The Weather Site</b></h3>
+            <p><b>Bringing you the most accurate and up to date weather forecasts</b></p>
+        </div>
+    </div>
 </header>
 
 <nav>
-    <div class="menu">Menu</div>
+    <div class="home">Home</div>
+    <div class="preston">Preston</div>
+    <div class="sodasprings">Soda Springs</div>
+    <div class="fishhaven">Fish Haven</div>
+    <div class="stormcenter">Storm Center</div>
+    <div class="gallery">Gallery</div>
 </nav>
 
-<div class="selectedtown">Town Name</div>
-
-<div class="mainimage">
-    <div class="summary1">Weather Summary</div>
+<div class="selectedtown">
+    <div class="townname">Preston Idaho</div>
 </div>
 
-<div class="fiveday">5 day forecast</div>
+<div class="mainimage">
+    <div class="backgroundpic">
+        <div class="summary1">Weather Summary<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed iaculis velit. Etiam scelerisque molestie varius. Nullam condimentum nulla magna, eget porta massa volutpat quis. Morbi vel pulvinar nunc, nec varius quam. Morbi mollis porttitor condimentum. Donec eu pretium erat, vel condimentum diam. Praesent pellentesque velit nec turpis varius, at eleifend quam feugiat. Maecenas interdum ex sed enim varius porttitor.</div>
+    </div>
+</div>
 
-<div class="article"></div>
+<div class="fiveday">
+    <div class="fivedayfor">Five Day Weather Forecast</div>
+</div>
+
+<div class="article">
+    <div class="articlemain">
+        <div class="articletop">
+            <div class="articlewords">Article<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed iaculis velit. Etiam scelerisque molestie varius. Nullam condimentum nulla magna, eget porta massa volutpat quis. Morbi vel pulvinar nunc, nec varius quam. Morbi mollis porttitor condimentum. Donec eu pretium erat, vel condimentum diam. Praesent pellentesque velit nec turpis varius, at eleifend quam feugiat. Maecenas interdum ex sed enim varius porttitor.</div>
+        </div>
+        <div class="articlebotton">
+            <div class="articlepic">Article Picture</div>
+        </div>
+    </div>
+</div>
 
 <div class="map">
-    <div class="contactinfo">Ipsum supsum dupsum</div>
+    <div class="contactinfo">Map</div>
 </div>
 
 <footer>
-
-
+    <a href="#home" class="active">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
 </footer>
     
 </body>
