--- a/week2/index.html
+++ b/week2/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Assignment portal page CIT 230: Web Front-End Development at Brigham Young University-Idaho.">
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css" /> 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
  </head>
  <body>
