week 5 large done

--- a/week5/preston-5.html
+++ b/week5/preston-5.html
@@ -46,6 +46,62 @@
     </div>
 </div>
 
+<div class="fivedaytitle"><b>Five Day Forecast</b></div>
+
+<div class="fiveday">
+    <div class="fivedaycast">
+        <table id="fivedaytable">
+            <tr>
+                <th>Wed</th>
+                <th>Thur</th>
+                <th>Fri</th>
+                <th>Sat</th>
+                <th>Sun</th>
+            </tr>
+            <tr>
+                <td><img src="snow.png" class="snow1" alt="snow"><br>22</td>
+                <td><img src="snow.png" class="snow1" alt="snow"><br>19</td>
+                <td><img src="snow.png" class="snow1" alt="snow"><br>22</td>
+                <td><img src="snow.png" class="snow1" alt="snow"><br>20</td>
+                <td><img src="snow.png" class="snow1" alt="snow"><br>23</td>
+            </tr>
+        </table>
+    </div>
+</div>
+
+<div class="articlebody">
+    <div class="article">
+        <div class="articlewords">
+            <div class="articleparagraph">
+                <h3>Article</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eleifend lacus sit amet nulla eleifend finibus. Proin sodales cursus purus quis blandit. Curabitur massa lectus, auctor tristique elit sed, facilisis gravida lectus. Vestibulum nec est efficitur, malesuada augue et, vulputate leo. Quisque placerat risus ex, gravida ultrices dolor ultricies ut. Morbi ornare eleifend eleifend. Sed scelerisque lacinia ligula ac aliquet. Maecenas dui tellus, volutpat in sodales a, laoreet et mauris. In luctus, orci eget faucibus scelerisque, nisl justo egestas diam, a condimentum purus urna eget urna. Integer commodo, purus vitae vestibulum posuere, tortor dui feugiat eros, eget malesuada elit magna ac leo. Donec mollis ac felis nec accumsan. Nam posuere scelerisque velit, a pharetra nibh volutpat nec.</p>
+            </div>
+        </div>
+        <div class="articlepic">
+            <div class="articlepic1"></div>
+        </div>
+    </div>
+</div>
+
+<div class="informationbody">
+    <div class="information">
+        <div class="map1">
+            <div class="mappic">Map</div>
+        </div>
+        <div class="contactinfo">
+            <div class="contacts">
+                <h3>Contact Information</h3>
+                <p>address</p>
+                <p>Phone Number / Email</p>
+            </div>
+        </div>
+    </div>    
+</div>
+
+<footer>
+    This is a footer
+</footer>
+
     
 </body>
 </html>
