--- a/week5/preston-5.html
+++ b/week5/preston-5.html
@@ -6,8 +6,8 @@
     <title>The Weather Site Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="normalize.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="small-5.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="large-5.css" />
+    <link rel="stylesheet" type="text/css" media="(max-width:865px)" href="small-5.css" />
+    <link rel="stylesheet" type="text/css" media="(min-width:866px)" href="large-5.css" />
 </head>
 <body>
 
@@ -74,7 +74,7 @@
         <div class="articlewords">
             <div class="articleparagraph">
                 <h3>Article</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eleifend lacus sit amet nulla eleifend finibus. Proin sodales cursus purus quis blandit. Curabitur massa lectus, auctor tristique elit sed, facilisis gravida lectus. Vestibulum nec est efficitur, malesuada augue et, vulputate leo. Quisque placerat risus ex, gravida ultrices dolor ultricies ut. Morbi ornare eleifend eleifend. Sed scelerisque lacinia ligula ac aliquet. Maecenas dui tellus, volutpat in sodales a, laoreet et mauris. In luctus, orci eget faucibus scelerisque, nisl justo egestas diam, a condimentum purus urna eget urna. Integer commodo, purus vitae vestibulum posuere, tortor dui feugiat eros, eget malesuada elit magna ac leo. Donec mollis ac felis nec accumsan. Nam posuere scelerisque velit, a pharetra nibh volutpat nec.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eleifend lacus sit amet nulla eleifend finibus. Proin sodales cursus purus quis blandit. Curabitur massa lectus, auctor tristique elit sed, facilisis gravida lectus. Vestibulum nec est efficitur, malesuada augue et, vulputate leo. Quisque placerat risus ex, gravida ultrices dolor ultricies ut. Morbi ornare eleifend eleifend. Sed scelerisque lacinia ligula ac aliquet. Maecenas dui tellus, volutpat in sodales a, laoreet et mauris. In luctus, orci eget faucibus scelerisque, nisl justo egestas diam, a condimentum purus urna eget urna.</p>
             </div>
         </div>
         <div class="articlepic">
@@ -99,7 +99,7 @@
 </div>
 
 <footer>
-    This is a footer
+    <p id="showDate">Date</p>
 </footer>
 
     
