--- a/week8/gallery-7.html
+++ b/week8/gallery-7.html
@@ -35,7 +35,7 @@
 		<li><a href="preston-7.html" title="Preston">Preston</a></li>
 		<li><a href="#" title="Soda Springs">Soda Springs</a></li>
 		<li><a href="#" title="Fish Haven">Fish Haven</a></li>
-        <li><a href="#" title="Storm Center">Storm Center</a></li>
+        <li><a href="stormcenter.html" title="Storm Center">Storm Center</a></li>
         <li><a href="gallery-7.html" class="active" title="Gallery">Gallery</a></li>
 	</ul>
 </nav>
