--- a/week8/stormcenter.html
+++ b/week8/stormcenter.html
@@ -11,6 +11,7 @@
     <script src="currentdate.js"></script>
     <script src="toggleMenu.js"></script>
     <script src="windchill.js"></script>
+    <script src="adjustRating.js"></script>
 </head>
 <body>
 
@@ -32,76 +33,65 @@
 	<ul class="navigation">
 		<li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
 		<li><a href="#" title="Home">Home</a></li>
-		<li><a href="preston-7.html" class="active" title="Preston">Preston</a></li>
+		<li><a href="preston-7.html" title="Preston">Preston</a></li>
 		<li><a href="#" title="Soda Springs">Soda Springs</a></li>
 		<li><a href="#" title="Fish Haven">Fish Haven</a></li>
-        <li><a href="#" title="Storm Center">Storm Center</a></li>
+        <li><a href="stormcenter.html" class="active" title="Storm Center">Storm Center</a></li>
         <li><a href="gallery-7.html" title="Gallery">Gallery</a></li>
 	</ul>
 </nav>
 
 <div class="selectedtown">
-    <div class="townname">Preston Idaho</div>
+    <div class="townname">Storm Center</div>
 </div>
 
-<div class="mainimage">
-    <div class="backgroundpic">
-        <div class="summary1">
-            <h3><u>Weather Summary</u></h3>
-            <p>Currently: Sunny<br>
-            Temperature: <span id="tempF">20</span>&#176;F<br>
-            Wind Chill: <span id="windchill"> </span><br>
-            Humidity: 69%<br>
-            Wind Speed: <span id="speed">15</span>mph</p>
-        </div>
-    </div>
-</div>
+<form>
+    <fieldset>
+        <legend>Personal Information</legend>
+        Name: <input type="text" placeholder="Jon Tron"><br>
+        Email (optional): <input type="text"  placeholder="example@hotmail.com"><br>
+        Phone Number: <input type="number" placeholder="999-999-9999"><br>
+        Zip Code: <input type="number" placeholder="83440">
+    </fieldset>
+</form>
 
-<div class="fiveday">
-    <h2>Five Day Forecast</h2>
-    <div class="forecastbox">
-        <img class="forecast" src="monday.png" alt="Monday">
-        <img class="forecast" src="tuesday.png" alt="Tuesday">
-        <img class="forecast" src="wednesday.png" alt="Wednesday">
-        <img class="forecast" src="thursday.png" alt="Thursday">
-        <img class="forecast" src="friday.png" alt="Friday">
-    </div>
-</div>
-
-<div class="articlebody">
-    <div class="article">
-        <div class="articlewords">
-            <div class="articleparagraph">
-                <h3>Article</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eleifend lacus sit amet nulla eleifend finibus. Proin sodales cursus purus quis blandit. Curabitur massa lectus, auctor tristique elit sed, facilisis gravida lectus. Vestibulum nec est efficitur, malesuada augue et, vulputate leo. Quisque placerat risus ex, gravida ultrices dolor ultricies ut. Morbi ornare eleifend eleifend. Sed scelerisque lacinia ligula ac aliquet. Maecenas dui tellus, volutpat in sodales a, laoreet et mauris. In luctus, orci eget faucibus scelerisque, nisl justo egestas diam, a condimentum purus urna eget urna.</p>
-            </div>
-        </div>
-        <div class="articlepic">
-            <div class="articlepic1"></div>
-        </div>
-    </div>
-</div>
-
-<div class="informationbody">
-    <div class="information">
-        <div class="map1">
-            <div class="mappic"></div>
-        </div>
-        <div class="contactinfo">
-            <div class="contacts">
-                <h3>Contact Information</h3>
-                <p>
-                    196 S State St<br>
-                    Preston, ID 83263
-                </p>
-                <p>
-                    123-456-7890<br>
-                    weathersite@hotmail.com
-                </p>
-            </div>
-        </div>
-    </div>    
-</div>
+<form>
+    <fieldset>
+        <legend>Storm Information</legend>
+        Storm Date: <input type="date" placeholder="mm/dd/yyyy"><br>
+        Storm Type: <input name="stormtype" id="stormtype" type="text" placeholder="Select One..." list="stormtypelist"><br>
+            <datalist id="stormtypelist">
+                <option value="Derecho">
+                <option value="Flooding">
+                <option value="Hail Storm">
+                <option value="Snow Storm">
+                <option value="Huricane">
+                <option value="Lightning">
+                <option value="Thunderstorm">
+            </datalist>
+        Rating (1 to 10): <input type="range" id="rating" value="5" min="1" max="10" step="1" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+            <span id="ratingvalue">1</span><br><br>
+        Storm Region:
+            <select name="stormregion" id="stormregion">
+                <option disabled selected>Select Region...</option>
+                <option value="preston">Preston</option>
+                <option value="soda">Soda Springs</option>
+                <option value="fish">Fish Haven</option>
+            </select><br>
+        Are You In Danger? (Select one)
+            <span class="danger">
+                <input type="radio" name="dangerlvl" id="dangeryes" value="y">
+                    <label for="dangeryes">Yes </label>
+                <input type="radio" name="dangerlvl" id="dangermaybe" value="m">
+                    <label for="dangermaybe">Maybe </label>
+                <input type="radio" name="dangerlvl" id="dangerno" value="n">
+                    <label for="dangerno">No </label>
+            </span><br><br>
+        Comments (Optional)
+            <textarea name="comments" id="comments" placeholder="Additional Info..."></textarea><br>
+        <input type="submit" value="Submit">
+    </fieldset>
+</form>
 
 <footer>
     <div>&copy; 2019 Brandon Parham</div> 
